plugins/kotlin/idea/tests/testData/multiplatform/jvmInlineValueClass/jvm/jvm.kt
package kotlin.jvm

annotation class JvmInline

@JvmInline
actual value class <!LINE_MARKER("descr='Has expects in common module'; targets=[(text=VC; container=common; icon=nodes/Module.svg); (text=i; container=common; icon=nodes/Module.svg)]")!>VC<!>(val i: Int)
